# uvlhub

./: .env.docker.example  .env.docker.production.example  .env.local.example  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  fix_bug_A.py  practicandogit.txt_b  practicandogit_a.txt  practicandogit_b.txt  pyproject.toml  requirements.txt
.github/workflows/: CI_lint.yml  CI_pytest.yml  ci.yml  codacy.yml  commits.yml  render.yml
app/: __init__.py  feature_loader.py
app/features/: conftest.py
app/features/auth/: __init__.py  models.py  repositories.py  routes.py  seeders.py  services.py
app/features/dataset/: __init__.py  api.py  forms.py  models.py  repositories.py  routes.py  seeders.py  services.py
app/features/explore/: __init__.py  repositories.py  routes.py  services.py
app/features/featuremodel/: __init__.py  models.py  repositories.py  services.py
app/features/flamapy/: __init__.py  routes.py  services.py
app/features/hubfile/: __init__.py  models.py  repositories.py  routes.py  services.py
app/features/profile/: __init__.py  routes.py  services.py
app/features/public/: __init__.py  routes.py
app/features/team/: __init__.py
app/features/webhook/: __init__.py  repositories.py  routes.py  services.py
app/features/zenodo/: __init__.py  repositories.py  services.py
app/modules/: conftest.py
app/modules/auth/: forms.py  models.py  repositories.py  routes.py  seeders.py  services.py
app/modules/dataset/: __init__.py  api.py  repositories.py  routes.py  seeders.py  services.py
app/modules/dataset_csv/: __init__.py  api.py  forms.py  routes.py  services.py
app/modules/explore/: repositories.py  services.py
app/modules/featuremodel/: repositories.py  (+1 more)
app/templates/: base_template.html
core/selenium/: common.py
docker/: docker-compose.dev.yml  docker-compose.prod.ssl.yml  docker-compose.prod.webhook.yml  docker-compose.prod.yml
docker/entrypoints/: development_entrypoint.sh  locust_entrypoint.sh
docker/images/: Dockerfile.dev  Dockerfile.locust  Dockerfile.prod  Dockerfile.render  Dockerfile.webhook
egc/: pyvenv.cfg
fakenodo/: app.py
migrations/versions/: 1d1dd8be5618_create_notepad_model.py  1dd0023cc21f_add_role_field_to_user.py  4f4d863dd860_add_2fa_fields_to_user.py  548dbe990e6b_create_notepad_model.py  c9739cb0e55d_create_notepad_model.py  d047c1844751_create_notepad_model.py  f2bbc46ceb27_create_notepad_model.py  fb1d199e3d84_create_notepad_model.py
rosemary/: pyproject.toml
rosemary/commands/: db_seed.py
tests/: selenium_support.py
vagrant/: 04_install_dependencies.yml  05_run_app.yml
(+135 files in other folders)
