[project]
name = "uvlhub"
version = "1.0.0"
description = "UVLHub — Flask product built on splent_framework."
readme = "README.md"
requires-python = ">=3.13"

[tool.splent]
features = [
    "auth",
    "dataset",
    "explore",
    "featuremodel",
    "flamapy",
    "hubfile",
    "profile",
    "public",
    "team",
    "zenodo",
]
features_dev = [
    "webhook",
]
features_prod = []

# --------------------
# Formatting & linting
# --------------------

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.isort]
line_length = 120
profile = "black"

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
