[project]
name = "uvlhub"
version = "1.0.0"
description = "UVLHub — Flask product built on splent_framework."
readme = "README.md"
requires-python = ">=3.13"

[tool.splent]
features = [
    "auth",
    "dataset",
    "explore",
    "featuremodel",
    "flamapy",
    "hubfile",
    "profile",
    "public",
    "team",
    "zenodo",
]
features_dev = [
    "webhook",
]
# webhook is deliberately in BOTH env lists: production needs /webhook/deploy
# for the CD pipeline (CD_webhook.yml posts there after a green Pytest run),
# and development/testing need it for its own test suite. The endpoint refuses
# outright when WEBHOOK_TOKEN is not configured, so enabling it in production
# does not open an unauthenticated surface.
features_prod = [
    "webhook",
]

# --------------------
# Formatting & linting
# --------------------

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.isort]
line_length = 120
profile = "black"

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]

# --------------------
# Testing
# --------------------

[tool.pytest.ini_options]
# Tests live next to the feature they exercise, plus optional cross-feature
# tests under tests/. Selenium and locust files are excluded by default —
# rosemary test exposes flags to opt into them.
testpaths = ["app/features", "tests"]
python_files = ["test_*.py"]
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "unit: pure unit tests, no Flask app, no database",
    "repository: repository tests against the database (no business logic)",
    "service: service-level tests against the database (orchestration + repos)",
    "integration: HTTP-level integration tests via Flask test client",
    "e2e: browser-driven end-to-end tests (requires the selenium grid)",
    "load: locust load tests (run via `rosemary locust`)",
]
